--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -2,3 +2,31 @@
   width: 25%;
   padding: 20px 15px;
 }
+
+.contacts {
+  border-bottom: 1px solid lightgrey;
+}
+
+ul {
+  padding: 0;
+
+}
+
+li {
+  list-style: none;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.selected {
+ color: red;
+}
