--- a/src/components/Chat/InputForMessage/Button/button.module.css
+++ b/src/components/Chat/InputForMessage/Button/button.module.css
@@ -1,8 +1,8 @@
 .btn {
   height: 100%;
-  width: 10%;
+  width: 5%;
   border: none;
   cursor: pointer;
-  background-color: #1851cb;
-  color: white;
+  background-color: transparent;
+  color: #3c3f41;
 }
