--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 25%;
   padding: 20px 15px;
+  background-color: #eeeeee;
 }
 
 .contacts {
@@ -13,7 +14,9 @@ ul {
 
 li {
   list-style: none;
-  margin: 20px 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
   cursor: pointer;
 }
 
@@ -25,8 +28,6 @@ a {
   color: black;
   text-decoration: none;
 }
-
-
 
 input {
   width: 100%;
@@ -40,8 +41,21 @@ input {
 
 .messages {
   font-size: 14px;
+
+  font-weight: 300;
 }
 
 .selected {
-  background-color: lavender;
+  background-color: #3c4fde;
+  width: 100%;
+  color: white;
+}
+
+.selected a {
+  color: white;
+}
+
+.main_contact {
+  overflow-y: scroll;
+  height: 100%;
 }
