--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -1,7 +1,9 @@
 .container {
   width: 25%;
-  padding: 20px 15px;
+  box-sizing: border-box;
+
   background-color: #eeeeee;
+  position: relative;
 }
 
 .contacts {
@@ -10,6 +12,7 @@
 
 ul {
   padding: 0;
+  margin-top: 60px;
 }
 
 li {
@@ -18,6 +21,8 @@ li {
   padding-bottom: 10px;
   padding-left: 10px;
   cursor: pointer;
+  display: flex;
+
 }
 
 p {
@@ -29,9 +34,12 @@ a {
   text-decoration: none;
 }
 
-input {
-  width: 100%;
-  height: 40px;
+.input {
+  width: 25%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+
 }
 
 .name {
@@ -58,4 +66,23 @@ input {
 .main_contact {
   overflow-y: scroll;
   height: 100%;
+}
+
+.avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 100px;
+  background-image: linear-gradient( 109.5deg,  rgba(76,221,242,1) 11.2%, rgba(92,121,255,1) 91.1% );
+}
+
+.avatar p {
+  font-size: 30px ;
+  color: white;
+  text-align: center;
+  line-height: 60px;
+}
+
+.info_block {
+  margin-left: 20px;
+  margin-top: 5px;
 }
