--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -70,16 +70,28 @@ a {
 
 .avatar {
   width: 60px;
+  position: relative;
   height: 60px;
   border-radius: 100px;
   background-image: linear-gradient( 109.5deg,  rgba(76,221,242,1) 11.2%, rgba(92,121,255,1) 91.1% );
 }
 
 .avatar p {
-  font-size: 30px ;
+  font-size: 25px ;
   color: white;
   text-align: center;
   line-height: 60px;
+  font-weight: 300;
+}
+
+.online{
+  background-color: #0ff80f;
+  width: 13px;
+  height: 13px;
+  border-radius: 100px;
+  position: absolute;
+  right: 5px;
+  top: 0;
 }
 
 .info_block {
