--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -22,7 +22,6 @@ li {
   padding-left: 10px;
   cursor: pointer;
   display: flex;
-
 }
 
 p {
@@ -39,7 +38,6 @@ a {
   height: 50px;
   position: fixed;
   top: 0;
-
 }
 
 .name {
@@ -73,18 +71,22 @@ a {
   position: relative;
   height: 60px;
   border-radius: 100px;
-  background-image: linear-gradient( 109.5deg,  rgba(76,221,242,1) 11.2%, rgba(92,121,255,1) 91.1% );
+  background-image: linear-gradient(
+    109.5deg,
+    rgba(76, 221, 242, 1) 11.2%,
+    rgba(92, 121, 255, 1) 91.1%
+  );
 }
 
 .avatar p {
-  font-size: 25px ;
+  font-size: 25px;
   color: white;
   text-align: center;
   line-height: 60px;
   font-weight: 300;
 }
 
-.online{
+.online {
   background-color: #0ff80f;
   width: 13px;
   height: 13px;
@@ -98,4 +100,3 @@ a {
   margin-left: 20px;
   margin-top: 5px;
 }
-
