--- a/src/components/Chat/chat.module.css
+++ b/src/components/Chat/chat.module.css
@@ -34,6 +34,14 @@
 ::-webkit-scrollbar {
   width: 0;
 }
+.message__info {
+  background-color: rgba(215, 215, 215, 0.55);
+  width: 300px;
+  text-align: center;
+  margin: 10px auto 20px auto;
+  border-radius: 50px;
+  padding: 10px 15px;
+}
 .incoming {
   background-color: rgba(217, 59, 92, 0.88);
   color: white;
@@ -190,4 +198,15 @@
 }
 .header_name__block {
   margin-right: 180px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+}
+
+.header_name__online {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #57d062;
+  margin-left: 10px;
 }
