--- a/src/components/Chat/chat.module.css
+++ b/src/components/Chat/chat.module.css
@@ -22,7 +22,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 .start_page h3 {
   background-color: rgba(232, 232, 232, 0.65);
@@ -197,7 +197,7 @@
 .header_search__block {
   display: flex;
   align-items: center;
-  width: 200px;
+  width: 250px;
 }
 .header_search__block input {
   outline: none;
@@ -223,7 +223,6 @@
   font-size: 20px;
 }
 .header_name__block {
-  padding-left: 10%;
   display: flex;
   align-items: center;
   font-weight: bold;
