added last time for sms in contacts

--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -59,7 +59,6 @@ a {
 
 .messages {
   font-size: 14px;
-
   font-weight: 300;
 }
 
@@ -109,9 +108,17 @@ a {
 }
 
 .info_block {
+  position: relative;
   margin-left: 20px;
   margin-top: 5px;
   max-width: 220px; /*** добавил от себя свойство @Курбан ***/
+}
+
+.time {
+  position: absolute;
+  right: 20px;
+  font-size: 14px;
+
 }
 
 /*** стили для темной темы ***/
