--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
+
+/** CSS transition **/
+
+.input_btn.enter-active {
+  transform: scale(0);
+  transition: 100ms;
+}
+.input_btn.exit-active {
+  transform: scale(0);
+  transition: 100ms;
+}
+
