--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -17,6 +17,7 @@
 }
 .name {
   padding-top: 20px;
+  text-align: center;
 }
 .username {
   text-align: center;
@@ -106,6 +107,40 @@
   padding-bottom: 30px;
   border-radius: 2px;
   margin-bottom: 40px;
+}
+.spin {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.avatar {
+  width: 60px;
+  position: relative;
+  margin: auto;
+  height: 60px;
+  border-radius: 100px;
+  background-image: linear-gradient(
+          109.5deg,
+          rgba(76, 221, 242, 1) 11.2%,
+          rgba(92, 121, 255, 1) 91.1%
+  );
+}
+.avatar p {
+  font-size: 25px;
+  color: white;
+  text-align: center;
+  line-height: 60px;
+  font-weight: 300;
+}
+.online {
+  background-color: #0ff80f;
+  width: 13px;
+  height: 13px;
+  border-radius: 100px;
+  position: absolute;
+  right: 5px;
+  top: 0;
 }
 
 /*** конец стилей для темной темы ***/
