--- a/src/components/Chat/chat.module.css
+++ b/src/components/Chat/chat.module.css
@@ -5,10 +5,11 @@
     rgba(254, 254, 254, 1) 39%,
     rgba(243, 250, 255, 0.8) 100%
   );
-  width: 55%;
+  flex: 1;
   padding: 0 10px;
 }
 .container_dark {
+  flex: 1;
   background-color: rgb(33, 33, 33);
   width: 35%;
   padding: 0 10px;
@@ -69,23 +70,32 @@
   padding: 10px 15px;
 }
 .incoming {
+  display: flex;
+  max-width: 80%;
+  margin: 0 auto 20px 0;
+  align-items: flex-end;
+}
+.outgoing {
+  display: flex;
+  max-width: 80%;
+  margin: 0 0 20px auto;
+}
+.messageIncoming {
+  margin-left: 10px;
+  word-break: break-all;
   background-color: rgba(217, 59, 92, 0.88);
   color: white;
   padding: 10px 15px;
-  margin: 0 auto 20px 0;
   border-radius: 15px 15px 15px 0;
-  max-width: 90%;
   display: flex;
   flex-direction: column;
   position: relative;
 }
-.outgoing {
-  max-width: 90%;
+.messageOutgoing {
   word-break: break-all;
   border-radius: 15px 15px 0 15px;
   background-color: rgba(60, 79, 222, 0.85);
   color: white;
-  margin: 0 0 20px auto;
   padding: 10px 15px;
   display: flex;
   position: relative;
