--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -144,7 +144,7 @@
   top: 0;
 }
 
-/*** @keyframes show-loader {
+ @keyframes show-loader {
   0% {
     opacity: 0;
     transform: translateX(100px);
@@ -155,4 +155,4 @@
   100% {
     transform: translateX(0);
   }
-} ***/
+}
