--- a/src/components/Chat/chat.module.css
+++ b/src/components/Chat/chat.module.css
@@ -7,6 +7,7 @@
   );
   flex: 1;
   padding: 0 10px;
+  transition: 300ms;
 }
 .container_dark {
   flex: 1;
@@ -14,6 +15,7 @@
   width: 35%;
   padding: 0 10px;
   color: white;
+  transition: 300ms;
 }
 .container_dark input {
   color: #b8b8b8;
