--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   transition: 100ms;
 }
 
+.toggle-active-enter,
+.toggle-active-exit,
 .search-btn-active-exit,
 .toggle-theme-active-exit,
 .search-btn-active-enter,
@@ -22,6 +24,23 @@ body {
   transition: 200ms;
 }
 
+/*.profile-enter {*/
+/*  transform: translateX(-200px);*/
+/*  transition: 200ms;*/
+/*}*/
+.profile-active-enter {
+  transform: translateX(0);
+  transition: 200ms;
+}
+.profile-active-exit {
+  width: 20%;
+  transition: 200ms;
+}
+/*.profile-exit-done {*/
+/*  transform: translateX(100px);*/
+/*  transition: 200ms;*/
+/*  display: none;*/
+/*}*/
 .Avatar.small {
   width: 40px;
   position: relative;
