--- a/src/index.css
+++ b/src/index.css
@@ -24,90 +24,20 @@ body {
   transition: 200ms;
 }
 
-/*.profile-enter {*/
-/*  transform: translateX(-200px);*/
-/*  transition: 200ms;*/
-/*}*/
-.profile-active-enter {
-  transform: translateX(0);
-  transition: 200ms;
+.profile-enter {
+  width: 0;
+  transition: 1000ms;
 }
-.profile-active-exit {
-  width: 20%;
-  transition: 200ms;
+.profile-enter-active {
+  width: 25%;
+  transition: 1000ms;
 }
-/*.profile-exit-done {*/
-/*  transform: translateX(100px);*/
-/*  transition: 200ms;*/
-/*  display: none;*/
-/*}*/
-.Avatar.small {
-  width: 40px;
-  position: relative;
-  height: 40px;
-  border-radius: 100px;
-  background-image: linear-gradient(
-    109.5deg,
-    rgba(76, 221, 242, 1) 11.2%,
-    rgba(92, 121, 255, 1) 91.1%
-  );
+.profile-exit {
+  width: 25%;
+  transition: 1000ms;
+}
+.profile-exit-active {
+  width: 0;
+  transition: 1000ms;
 }
 
-.Avatar.medium {
-  width: 60px;
-  position: relative;
-  height: 60px;
-  border-radius: 100px;
-  background-image: linear-gradient(
-    109.5deg,
-    rgba(76, 221, 242, 1) 11.2%,
-    rgba(92, 121, 255, 1) 91.1%
-  );
-}
-
-.Avatar.large {
-  width: 90px;
-  position: relative;
-  height: 90px;
-  border-radius: 100px;
-  background-image: linear-gradient(
-    109.5deg,
-    rgba(76, 221, 242, 1) 11.2%,
-    rgba(92, 121, 255, 1) 91.1%
-  );
-}
-
-.Avatar.small p {
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  line-height: 40px;
-  font-weight: 300;
-}
-
-.Avatar.medium p {
-  font-size: 25px;
-  color: white;
-  text-align: center;
-  line-height: 60px;
-  font-weight: 300;
-}
-
-.Avatar.large p {
-  font-size: 45px;
-  color: white;
-  text-align: center;
-  line-height: 90px;
-  font-weight: 300;
-}
-
-.Avatar .online {
-  background-color: #0ff80f;
-  width: 13px;
-  height: 13px;
-  border-radius: 100px;
-  position: absolute;
-  right: 5px;
-  border: solid 1px white;
-  top: 0;
-}
